@@ -4,6 +4,7 @@
   * moved the proxy and the admin code into modules
   * added unit-testing for the lua scripts
   * added a error-msg if trailing options without dashes are specified
+  * added a script-cache with automatic reload on change
   * fixed tutorial-inject.lua to start indexing at 1 (#32088)
 
 0.6.1 - 
